update show by id
